modified:   index.html 	new file:   profile.html 	modified:   styles.css
:-w

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
   <title>Did Not Ask</title>
 </head>
   <body>
-  <!--  <h1>This is a solo project!</h1>
-    <p>Aaaall by myseeeelf</p>
-    <br>
-    <p>Don't wanna be...</p>
-    <button> I'm a button! </button>
-  -->
+
     <header>
-      <button>submit</button>
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Support & Donate</li>
+        <li>About Us</li>
+        <li>FAQ</li>
+        <li><a href= "profile.html">Profile</a> </li>
+      </ul>
+    </nav>
     </header>
-    
-    <section>
+
+    <button>submit</button>
+    <section class="story">
       <div>1</div>
       <div>2</div>
       <div>3</div>
