modified:   index.html 	new file:   post.html 	new file:   sign-in.html 	new file:   sign-up.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
         <li>About Us</li>
         <li>FAQ</li>
         <li><a href= "profile.html">Profile</a> </li>
+        <li> <button>Search</button> </li>
       </ul>
     </nav>
     </header>
+    <p>
+      <input class="text" type="text" name="Story" placeholder="Submit your story">
+      <input class="submit" type="submit">
+    </p>
 
-    <button>submit</button>
+  </section>
     <section class="story">
-      <div>1</div>
-      <div>2</div>
+      <div>In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content.</div>
+      <div>commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used before final copy is available, but it may also be used to temporarily replace copy in a process called greeking,</div>
       <div>3</div>
 
     </section>
