modified:   JS-Functions.txt 	modified:   ReadMe.txt 	modified:   index.html 	modified:   logic.js 	modified:   post.html 	modified:   profile.html 	modified:   sign-in.html 	modified:   sign-up.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <form>
       <input class="textarea" type="text" name="Story" placeholder="Submit your story">
       <button class="submit" type="submit">Submit</button> 
-      <dialog open>
+      <dialog open class="moderate">
         <p method="dialog">
           Thank you!
          <br>Please allow our moderators a moment to check and approve your post.
@@ -46,7 +46,9 @@
     <div id="top"> Spoiled majestic by gosh proudly and on some much struck until crud kookaburra far much much before that horse frugally on garrulous and overate so overheard some the gosh thus complete more one. Nutria because the out courageously globefish far wherever hazy however sprang ouch before victorious more before innocently the scorpion yikes gosh this far uneasily perceptible winked hey jeepers some dolorous static oh the ouch dizzily in the far painfully krill.</div>
     <div id="right">Share</div>
     <div id="left">Like</div>
-    <div id="center">Comment</div>
+    <a id="post-page" href="post.html">
+      <div id="center">Comment</div>
+    </a>
   </div>  
 
   <div class="test">
@@ -110,6 +112,6 @@
   </div>  
 </section>
 
-<script>src="logic.js"</script>
+<script type="text/javascript" src = "logic.js"></script>
   </body>
 </html>
