--- a/post.html
+++ b/post.html
@@ -30,7 +30,14 @@
     <div id="left-pp">Like</div>
     <div id="right-pp">Share</div>
     <div id="center-pp">Comment</div>
-  </div> 
 
+  
+  <form>
+    <input class="comment-area" type="text" name="comment" placeholder="Write a comment">
+    <button class="Comment" type="text">Comment</button> 
+  </form>
+</div> 
+
+    <script type="text/javascript" src = "logic.js"></script>
     </body>
     </html>
