--- a/profile.html
+++ b/profile.html
@@ -24,8 +24,6 @@
       </ul>
     </nav>
   </header>
-
-
  
   <section>
 
@@ -52,6 +50,6 @@
 
 
   </section>
-
+    <script type="text/javascript" src = "logic.js"></script>
     </body>
     </html>
