--- a/sign-up.html
+++ b/sign-up.html
@@ -39,6 +39,7 @@
                   
 
         </div>
-        </form> 
+        </form>
+        <script type="text/javascript" src = "logic.js"></script> 
         </body>
         </html>
