--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -5,7 +5,7 @@
   <link 
   rel="stylesheet"
   type="text/css"
-  href= "styles.css"/>
+  href= "../styles.css"/>
 
   <meta charset="UTF-8">
   <meta name="viewport" conent="width=device-width">
@@ -50,6 +50,10 @@
 
 
   </section>
-    <script type="text/javascript" src = "logic.js"></script>
+  <script type="text/javascript" src = "../FranksTutorial/simulated_data.js"></script>
+  <script type="text/javascript" src = "../FranksTutorial/server_stub.js"></script>
+  <script type="text/javascript" src = "../Code/logic.js"></script>
+  <script type="text/javascript" src = "../Code/var.js"></script>
+
     </body>
     </html>
