--- a/Pages/sign-up.html
+++ b/Pages/sign-up.html
@@ -5,7 +5,7 @@
   <link 
   rel="stylesheet"
   type="text/css"
-  href= "styles.css"/>
+  href= "../styles.css"/>
 
   <meta charset="UTF-8">
   <meta name="viewport" conent="width=device-width">
@@ -40,6 +40,9 @@
 
         </div>
         </form>
-        <script type="text/javascript" src = "logic.js"></script> 
+        <script type="text/javascript" src = "../FranksTutorial/simulated_data.js"></script>
+        <script type="text/javascript" src = "../FranksTutorial/server_stub.js"></script>
+        <script type="text/javascript" src = "../Code/logic.js"></script>
+        <script type="text/javascript" src = "../Code/var.js"></script>
         </body>
         </html>
