deleted:    Data/DB.png 	deleted:    Data/queryDB.py 	new file:   Foundations Project/Server/db/DB Entity.PNG 	renamed:    Data/DBconnector.py -> Foundations Project/Server/db/DBconnector.py 	renamed:    Data/mainDB.db -> Foundations Project/Server/db/mainDB.db 	new file:   Foundations Project/Server/db/mainDB.db-journal 	new file:   Foundations Project/Server/db/queryDB.py 	renamed:    Pages/index.html -> Foundations Project/Server/static/html/index.html 	renamed:    Pages/post.html -> Foundations Project/Server/static/html/post.html 	renamed:    Pages/profile.html -> Foundations Project/Server/static/html/profile.html 	new file:   Foundations Project/Server/static/html/sign-in.html 	renamed:    Pages/sign-up.html -> Foundations Project/Server/static/html/sign-up.html 	renamed:    Code/JS-Functions.txt -> Foundations Project/Server/static/js/JS-Functions.txt 	renamed:    Code/logic.js -> Foundations Project/Server/static/js/logic.js 	renamed:    Code/var.js -> Foundations Project/Server/static/js/var.js 	renamed:    styles.css -> Foundations Project/Server/static/styles.css 	new file:   Foundations Project/__pycache__/app.cpython-37.pyc 	new file:   Foundations Project/app.py 	renamed:    Data/classes.db -> Foundations Project/mainDB.db 	deleted:    Pages/sign-in.html

--- a/Foundations Project/Server/static/html/profile.html
+++ b/Foundations Project/Server/static/html/profile.html
@@ -50,10 +50,9 @@
 
 
   </section>
-  <script type="text/javascript" src = "../FranksTutorial/simulated_data.js"></script>
-  <script type="text/javascript" src = "../FranksTutorial/server_stub.js"></script>
-  <script type="text/javascript" src = "../Code/logic.js"></script>
-  <script type="text/javascript" src = "../Code/var.js"></script>
+  
+  <script type="text/javascript" src = "..\js\logic.js"></script>
+  <script type="text/javascript" src = "..\js\var.js"></script> 
 
     </body>
     </html>
