--- a/Foundations Project/Server/static/html/index.html
+++ b/Foundations Project/Server/static/html/index.html
@@ -21,14 +21,14 @@
         <li>About Us</li>
         <li>FAQ</li>
         <li><a href= "profile.html">Profile</a> </li>
-        <li> <button>Search</button> </li>
+        <li><a href = "sign-in.html"> Sign-in</a></li>
       </ul>
     </nav>
     </header>
 
     <div class="inputField">
       <input id="userStory" class="textarea" type="text" name="Story" placeholder="Submit your story">
-      <button class="submit" type="submit" onclick="newPost()" value="submit" >Submit</button> 
+      <button class="submit" type="submit" id="submit_button" onclick= "newPost()" value="submit" >Submit</button> 
       <dialog id="invisible" open class="invisible">
         <p method="dialog">
           Thank you!
@@ -46,7 +46,7 @@
     <div id="top"> Spoiled majestic by gosh proudly and on some much struck until crud kookaburra far much much before that horse frugally on garrulous and overate so overheard some the gosh thus complete more one. Nutria because the out courageously globefish far wherever hazy however sprang ouch before victorious more before innocently the scorpion yikes gosh this far uneasily perceptible winked hey jeepers some dolorous static oh the ouch dizzily in the far painfully krill.</div>
     <div id="right">Share</div>
     <div id="left">Like</div>
-    <a id="post-page" href="post.html">
+    <a id="post-page"href="post.html">
       <div id="center">Comment</div>
     </a>
   </div>  
@@ -112,9 +112,8 @@
   </div>  
 </section>
 
-<script type="text/javascript" src = "../z-FranksTutorial/simulated_Data.js"></script>
-<script type="text/javascript" src = "../z-FranksTutorial/server_stub.js"></script>
-<script type="text/javascript" src = "../Code/logic.js"></script>
-<script type="text/javascript" src = "../Code/var.js"></script>
+
+<script type="text/javascript" src = "..\js\logic.js"></script>
+<script type="text/javascript" src = "..\js\var.js"></script> 
 </body>
 </html>
