--- a/Foundations Project/Server/static/html/index.html
+++ b/Foundations Project/Server/static/html/index.html
@@ -5,7 +5,7 @@
   <link 
   rel="stylesheet"
   type="text/css"
-  href= "..\styles.css">
+  href= "static/styles.css">
 
   <meta charset="UTF-8">
   <meta name="viewport" conent="width=device-width">
@@ -113,7 +113,7 @@
 </section>
 
 
-<script type="text/javascript" src = "..\js\logic.js"></script>
-<script type="text/javascript" src = "..\js\var.js"></script> 
+<script type="text/javascript" src = "static\js\logic.js"></script>
+<script type="text/javascript" src = "static\js\var.js"></script> 
 </body>
 </html>
