modified:   Foundations Project/Server/DBconnector.py 	modified:   Foundations Project/Server/__pycache__/DBconnector.cpython-37.pyc 	modified:   Foundations Project/Server/app.py 	modified:   Foundations Project/Server/db/mainDB.db 	modified:   Foundations Project/Server/static/html/index.html 	modified:   Foundations Project/Server/static/html/sign-in.html 	modified:   Foundations Project/Server/static/js/logic.js 	modified:   Foundations Project/Server/static/js/var.js 	deleted:    z-FranksTutorial/Database/DB diagram.png 	deleted:    z-FranksTutorial/Database/DB_connector.py 	deleted:    z-FranksTutorial/Database/Query_test.py 	deleted:    z-FranksTutorial/Database/classes.db 	deleted:    z-FranksTutorial/Flask/Server/DB_connector.py 	deleted:    z-FranksTutorial/Flask/Server/__pycache__/DB_connector.cpython-37.pyc 	deleted:    z-FranksTutorial/Flask/Server/db/classes.db 	deleted:    z-FranksTutorial/Flask/Server/main.py 	deleted:    z-FranksTutorial/Flask/Server/static/html/index.html 	deleted:    z-FranksTutorial/Flask/Server/static/js/main.js 	deleted:    z-FranksTutorial/classes.db 	deleted:    z-FranksTutorial/main.js deleted:    z-FranksTutorial/server_stub.js 	deleted:    z-FranksTutorial/simulated_Data.js 	deleted:    z-FranksTutorial/test.html

--- a/Foundations Project/Server/static/html/index.html
+++ b/Foundations Project/Server/static/html/index.html
@@ -26,7 +26,7 @@
     </nav>
     </header>
 
-    <div class="inputField">
+    <div id= "inputField" class="inputField">
       <input id="userStory" class="textarea" type="text" name="Story" placeholder="Submit your story">
       <button class="submit" type="submit" id="submit_button" onclick= "newPost()" value="submit" >Submit</button> 
       <dialog id="invisible" open class="invisible">
@@ -41,13 +41,13 @@
     </div>
 
 
-<section>
-  <div class="test">
-    <div id="top"> Spoiled majestic by gosh proudly and on some much struck until crud kookaburra far much much before that horse frugally on garrulous and overate so overheard some the gosh thus complete more one. Nutria because the out courageously globefish far wherever hazy however sprang ouch before victorious more before innocently the scorpion yikes gosh this far uneasily perceptible winked hey jeepers some dolorous static oh the ouch dizzily in the far painfully krill.</div>
-    <div id="right">Share</div>
-    <div id="left">Like</div>
+<section id= "postBox">
+  <div id= "post" class="test">
+    <div id="story"> Spoiled majestic by gosh proudly and on some much struck until crud kookaburra far much much before that horse frugally on garrulous and overate so overheard some the gosh thus complete more one. Nutria because the out courageously globefish far wherever hazy however sprang ouch before victorious more before innocently the scorpion yikes gosh this far uneasily perceptible winked hey jeepers some dolorous static oh the ouch dizzily in the far painfully krill.</div>
+    <div id="share">Share</div>
+    <div id="like">Like</div>
     <a id="post-page"href="post.html">
-      <div id="center">Comment</div>
+      <div id="comment">Comment</div>
     </a>
   </div>  
 
