--- a/Foundations Project/Server/static/html/profile.html
+++ b/Foundations Project/Server/static/html/profile.html
@@ -5,54 +5,49 @@
   <link 
   rel="stylesheet"
   type="text/css"
-  href= "../styles.css"/>
+  href= "static/styles.css"/>
 
   <meta charset="UTF-8">
   <meta name="viewport" conent="width=device-width">
   <title>DNA Profile</title>
 </head>
   <body>
-<header>
-    <nav id="sidenav">
-      <ul>
-        <li><a href="index.html"> Home</a></li>
-        <li>Support & Donate</li>
-        <li>About Us</li>
-        <li>FAQ</li>
-        <li><a href= "profile.html">Profile</a> </li>
-        <li> <button>Search</button> </li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Support & Donate</li>
+          <li>About Us</li>
+          <li>FAQ</li>
+          <li><a href= "/profile">Profile</a> </li>
+          <li><a href = "/sign-in"> Sign-in</a></li>
+          <li><a href = "/sign-up"> Sign-up</a></li>
+        </ul>
+      </nav>
+      </header>
  
   <section>
 
 
-    <div class="test">
-      <div id="top"> Spoiled majestic by gosh proudly and on some much struck until crud kookaburra far much much before that horse frugally on garrulous and overate so overheard some the gosh thus complete more one. Nutria because the out courageously globefish far wherever hazy however sprang ouch before victorious more before innocently the scorpion yikes gosh this far uneasily perceptible winked hey jeepers some dolorous static oh the ouch dizzily in the far painfully krill.</div>
-      <div id="right">Delete</div>
-      <div id="left">Like</div>
-      <div id="center">Comment</div>
-    </div>  
-  
-    <div class="test">
-      <div id="top"> again </div>
-      <div id="right">Delete</div>
-      <div id="left">Like</div>
-      <div id="center">Comment</div>
-    </div>  
+    <section id= "postBox">
+      <div class= "post">
+        <div class="story"> Ideally, your post contents would be placed here :) </div>
+        
+        <div class="share">Share</div>
+        <div class="like">Like</div>
+      </div>
+    </section>
   
     <aside>
-      <img class=profile src="https://thumbs.dreamstime.com/b/creative-vector-illustration-default-avatar-profile-placeholder-isolated-background-art-design-grey-photo-blank-template-mo-118823351.jpg">
-      <p> My Profile</p>
+     <p> My Profile</p>
         <button> Edit Profile </button>
     </aside>
 
 
   </section>
   
-  <script type="text/javascript" src = "..\js\logic.js"></script>
-  <script type="text/javascript" src = "..\js\var.js"></script> 
+  <script type="text/javascript" src = "static\js\logic.js"></script>
+  <script type="text/javascript" src = "static\js\var.js"></script> 
 
     </body>
     </html>
